--- a/Carpool.Client/Carpool.Client/App.razor
+++ b/Carpool.Client/Carpool.Client/App.razor
@@ -1,12 +1,28 @@
-﻿<Router AppAssembly="@typeof(App).Assembly">
-    <Found Context="routeData">
-        <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
-        <FocusOnNavigate RouteData="@routeData" Selector="h1" />
-    </Found>
-    <NotFound>
-        <PageTitle>Not found</PageTitle>
-        <LayoutView Layout="@typeof(MainLayout)">
-            <p role="alert">Sorry, there's nothing at this address.</p>
-        </LayoutView>
-    </NotFound>
-</Router>
+﻿@using MudBlazor
+
+<MudThemeProvider Theme="@MyLightTheme">
+    <CascadingAuthenticationState>
+        <MudDialogProvider>
+            <Router AppAssembly="@typeof(App).Assembly">
+                <Found Context="routeData">
+                    <RouteView RouteData="@routeData" DefaultLayout="@typeof(MainLayout)" />
+                    <FocusOnNavigate RouteData="@routeData" Selector="h1" />
+                </Found>
+                <NotFound>
+                    <LayoutView Layout="@typeof(MainLayout)">
+                        <h1>Seite nicht gefunden</h1>
+                        <p>Die angeforderte Seite existiert nicht.</p>
+                    </LayoutView>
+                </NotFound>
+            </Router>
+        </MudDialogProvider>
+    </CascadingAuthenticationState>
+</MudThemeProvider>
+
+
+@code {
+    private MudTheme MyLightTheme = new MudTheme()
+    {
+        
+    };
+}
