--- a/Carpool.Client/Carpool.Client/_Imports.razor
+++ b/Carpool.Client/Carpool.Client/_Imports.razor
@@ -8,3 +8,6 @@
 @using Microsoft.JSInterop
 @using Carpool.Client
 @using Carpool.Client.Layout
+@using Microsoft.AspNetCore.Components
+@using MudBlazor
+@using MudBlazor.Services
